--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 }
 .main-content {
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-color: white;
   border-radius: 15px;
   padding: 50px 40px;
@@ -46,7 +46,7 @@ body {
   line-height: 1.5;
 }
 
-.main-content .person {
+.main-content .author {
   font-size: 1.6rem;
   color: red;
   text-transform: uppercase;
